# strict-lib

./: CMakeLists.txt  LICENSE  Makefile  README.md  a.out  do_list.txt  error_handling.hpp  example.cpp  example.x  example1.cpp  example2.cpp  garray.hpp  main.cpp  refs.cpp  strict_array.hpp  strict_array_ops.hpp  strict_auxiliary.hpp  strict_concepts.hpp  strict_error.hpp  strict_iterator.hpp  strict_slicearray.hpp  strict_util.hpp  strict_val.hpp  util.hpp  value_traits.hpp
benchmark/: Makefile  array1D_bm.cpp  fixedarray1D_bm.cpp  make3.sh  run3.sh
example/: Makefile  a.out  example0.cpp  example1.cpp  example1.x  example2.cpp  example2.x  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  run.sh
src/: array_IO.hpp  array_base1D.hpp  array_ops.hpp  attach1D.hpp  derived1D.hpp  fixed_array_base1D.hpp  iterator.hpp  math.hpp  slice.hpp  slicearray_base1D.hpp  strict_array.hpp  strict_array2D.hpp  strict_array_ops.hpp  strict_auxiliary.hpp  strict_concepts.hpp  strict_error.hpp  strict_fixed_array.hpp  strict_iterator.hpp  strict_lib.hpp  strict_math.hpp  strict_slicearray.hpp  strict_util.hpp  strict_val.hpp
src/Common/: array_common.hpp  auxiliary_types.hpp  common.hpp  concepts.hpp  config.hpp  constants.hpp  error.hpp  strict_IO.hpp  strict_val.hpp  strict_val_ops.hpp
src/Expr/: array_expr1D.hpp  exclude_last.hpp  functors.hpp
tests/: Makefile  a.out  run.sh  test_array.cpp  test_error.cpp  test_expr.cpp  test_functions.cpp  test_randslicearray.cpp  test_slice_array.cpp  test_slicearray.cpp  test_types.cpp  test_val.cpp
(+4 files in other folders)
